# WeatherApp

./: CMakeLists.txt  README.txt  main.cpp
resources/: styles.css
